app/page.module.css
.navContainer{
    display: flex;
    justify-content: space-between;
    padding: 60px;
    align-items: center;
}

.navContainer img{
    height: 40px;
}

.navContainer nav{
    display: flex;
    gap: 15px;
}

.navContainer a{
    text-decoration: none;
    color: rgba(0, 0, 0, 0.533);
    transition: .2s;
}

.navContainer a:not(:last-child)::after{
    content: "|";
    margin-left: 20px;
    color: rgba(0, 0, 0, 0.533);
}

.navContainer a.highlighted{
    color: black !important;
}

.navContainer a:not(.highlighted):hover{
    color: rgba(0, 0, 0, 0.701);
}


.main .topSection{
    padding: 70px;
    padding-top: 0px;
    margin-bottom: 80px;
}

.main .brief{
    margin-top: 30px;
}

.topSection h1, .darkSection h1{
    font-size: 50px;
    font-weight: 300;
    white-space: nowrap;
}

.main .headingHeavy, .darkSection .headingHeavy{
    font-weight: 700;
}

.main .brief p{
    max-width: 350px;
    width: fill;
    margin-top: 20px;
    line-height: 23px;
}

.primaryBtn{
    margin-top: 30px;
    background-color: #0e4e7b;
    padding: 15px 30px;
    border-radius: 10px;
    color: white;
    border: none;
    outline: none;
    cursor: pointer;
    transition: .2s;
    border: 1px solid transparent;
    font-weight: 500;
    font-size: 15px;
    box-shadow: 3px 3px 0.5rem rgba(0, 0, 0, 0.217);
}


.primaryBtn:hover{
    border-color:  #0e4e7b;
    background-color: transparent;
    color:  #0e4e7b;
}

.topSection{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.imageContainer{
    position: relative;
    margin-right: 60px;
}

.mainImage{
    width: 300px;
    height: 300px;
    border-radius: 40px;
    object-fit: cover;
    box-shadow: 0 0 0.5rem black;
}

.smallImageTop,.smallImageBottom{
    position: absolute;
    width: 120px;
    height: 120px;
    border-radius: 35px;
    object-fit: cover;
    z-index: -1;
}

.smallImageTop{
    top: -50px;
    left: -50px;
}

.smallImageBottom{
    bottom: -50px;
    right: -50px;
}

.darkSection{
    background-color: #111a30;
    padding: 60px;
}

.darkSection{
    color: white;
    display: flex;
    justify-content: space-around;
    align-items: center;
    /* gap: 50px; */
    position: relative;
}
.box {
    width: 100%;
    height: 200px;
    overflow: hidden;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    /* background-color: #0e4e7b; */
    display: flex;
    justify-content: flex-end;
  }

  .box img{
    opacity: .02;
  }
 .boxImg2{
    position: absolute;
    width: 1500px;
 }


.fancyText{
    position: relative;
    z-index: 1;
    margin: 100px;
    margin-left: 140px;
}

.fancyText::after{
    position: absolute;
    content: " ";
    height: 200px;
    width: 200px;
    background-color: #dd752e;
    border-radius: 50px;
    z-index: -1;
    top: 50%;
    transform: translate(-35% , -50%);
    box-shadow: -5px 5px .8rem rgba(0, 0, 0, 0.271);
}

.fancyText h1{
    font-size: 45px;
    text-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.37);
}
.darkSectionBody{
    margin-right: 50px;
}

.darkSectionBody h2{
    font-weight: 400;
    margin-bottom: 20px;
}

.darkSectionBody p{
    font-weight: 200;
    line-height: 22px;
}

.lightSection2{
    padding:120px  80px;
    display:flex;
    gap:100px;
    justify-content:space-between;
}

.lightSection2 h1{
    font-size:40px;
    margin-bottom:20px;
}

.line{
    border: 1px solid rgba(0, 0, 0, 0.442);
    height:200px;
}

.blueScreenBottom{
    background-color: #111a30;
    padding: 120px;
    padding-right: 60px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    min-height: 100vh;
    color: white;
    gap: 60px;
}
.blueScreenBottom h1{
    font-size: 45px;
    font-weight: 100;
    position: relative;

}.blueScreenBottom h1 span{
    font-weight: 600;
}.blueScreenBottom h1::before{
    content: " ";
    background-color: rgba(255, 255, 255, 0.049);
    height: 280px;
    width: 210px;
    transform: translate(-50%, -20%);
    position: absolute;
    top: 0;
    border-radius: 40px;
}
.waitList{
    display: flex;
    flex-direction: column;
}

.waitList input{
    outline: none;
    border: 1px solid rgba(255, 255, 255, 0.382);
    border-radius: 10px;
    padding: 10px 13px;
    margin-bottom: 20px;
    margin-top: 8px;
    background-color: transparent;
    color: white;
    appearance: none;
    width: fill;
}.waitList label{
    font-size: 14px;
    margin-top: 5px;
    opacity: .8;
}.formSection{
    flex-grow: 2;
    max-width: 400px;
}

.formSection p{
    font-weight: 100;
    opacity: .5;
    margin-bottom: 30px;
}

.waitList button{
    border-radius: 10px;
    padding: 15px 30px;
    margin-top: 20px;
    border: none;
    outline: none;
    cursor: pointer;
    width: fit-content;
    font-weight: 600;
    font-size: 15px;
    color: rgba(0, 0, 0, 0.877);
    transition: .2s;
    border: 1px solid transparent;
}
.waitList button:hover{
    border-color: rgba(255, 255, 255, 0.448);
    background-color: rgba(255, 255, 255, 0.048);
    color: white;
}

.footer{
    background-color: #080a14;
    padding: 60px 80px ;
    display: flex;
    justify-content: space-between;
    color: white;
    align-items: center;
    letter-spacing: 2px;
}

.footer h3{
    font-weight: 300;
    font-size: 16px;
}

.footer h3:not(.footer div h3){
     opacity: .4;
}

.footer div{
    text-align: center;
}


.footer div p{
    opacity: .5;
    margin-top: 5px;
    font-weight: 300
}

@media only screen and (max-width: 1186px) {
    .topSection h1, .darkSection h1, .blueScreenBottom h1{
        font-size: 35px;
    }
    .lightSection2 h1{
        font-size: 29px;
    }.fancyText::after{
        height: 150px;
        width: 150px;
    }.blueScreenBottom h1::before{
        height: 220px;
        width: 170px;
    }.mainImage{
        width: 200px;
        height: 200px;
    }.fancyText{
        margin: 70px;
    }
    .darkSectionBody h2{
        font-size: 20px;
    }
    .lightSection2 .line{
        height: auto;
    }
    .lightSection2{
        gap: 50px;
    }.smallImageTop{
        right: -50px;
        left: auto;
    }
}

@media only screen and (max-width: 866px) {
    .navContainer, .main .topSection {
        padding: 40px;
    }.lightSection2{
        padding: 45px;
        flex-direction: column;
    }.darkSection{
        padding: 45px;
    }
    .main .topSection{
        padding-top: 0px;
    }.imageContainer{
        align-self: flex-end;
        margin-top: -70px;
   }.darkSection{
        flex-direction: column;
        align-items: flex-start;
    }.fancyText{
        margin: 50px;
        margin-left: 8px;
        padding-left: 30px;
    }.fancyText::after{
        width: 8px;
        height: 100px;
        transform: translate(-35px, -50%);
    }.darkSectionBody{
        margin: 0px;
        padding-bottom: 50px;
    }
    
}

@media only screen and (max-width: 713px) {
   .blueScreenBottom{
        flex-direction: column;
        align-items: flex-start;
        margin: 0;
        padding: 40px;
        padding-top: 120px;
   } .blueScreenBottom h1::before{
        transform: translate(50px, -50px) ;
    } .blueScreenBottom h1{
        margin-bottom: 70px;
    }.formSection{width: 100%; max-width: unset;}
   .topSection{
        flex-direction: column;
        align-items: flex-start;
   }.footer{
    padding: 40px;
   }
}
@media only screen and (max-width: 580px) {
 
    .footer{
        flex-direction: column;
        gap: 30px;
    }.footer > h3:first-child{
        display: none;
    }.footer > h3:last-child::before{
        content: "TrinityX ";
    }.navContainer nav{
        display: none;
    }.main h1{
     font-size: 30px;
    }.lightSection2 h1{
        font-size: 20px;
    }.main h2{
        font-size: 18px;
    }
    .footer h3{
        font-size: 16px;
    }.footer p{
        font-size: 15px;
    }
}@media only screen and (max-width: 465px){
    .main p{
        font-size: 14px;
        line-height: 23px;
    }    .main .topSection h1:not(h1:first-child){
        display: contents;
    }
    .main h1{
        font-size: 25px;
        white-space: wrap;
       }.lightSection2 h1{
           font-size: 20px;
       }.main h2{
           font-size: 16px;
       }
       .navContainer img{
        height: 30px;
    }
    .imageContainer{
        margin-top: 40px;
        margin-right: 0px;
        width: 100%;
    }.mainImage{
        border-radius: 10px;
        width: 100%;
    }
    .imageContainer img:not(.mainImage){
        display: none;
    }.main .topSection{
        margin-bottom: 0px;
    }.primaryBtn, .waitList button{
        font-size: 13px;
    }.main .brief p{
        max-width: unset;
    }
   
}@media only screen and (max-width: 370px){
    .main .topSection{
        padding: 25px;
        padding-top: 0px;
    }.darkSection,.lightSection2,.navContainer{
        padding: 25px;
    }.blueScreenBottom{
        padding: 25px;
        padding-top: 120px;
    }
}

